Fix color contrast in Markdown Editor (both light & dark).
Fixed color issues that were making things hard to read:
- selected text color, including inline code.
- HTML tags
- Horizontal rule not visible in Preview mode. While at it, I changed the color in Edit mode as well as syntax highlighting.
- blockquote (was gray over gray)

Attempted to fix uneven margins between top and bottom for inline-code and codeblock. Also, removed the extra margin to make it more nice and cosy, instead of far apart.

--- a/ui/scss/component/_markdown-preview.scss
+++ b/ui/scss/component/_markdown-preview.scss
@@ -114,6 +114,7 @@
     margin-bottom: 2rem;
     position: relative;
     top: 1rem;
+    border: 1px solid var(--color-editor-hr-preview);
   }
 
   // Code blocks
@@ -123,8 +124,8 @@
     word-break: break-all;
 
     code {
-      margin-bottom: var(--spacing-m);
-      padding: var(--spacing-m);
+      margin-bottom: var(--spacing-medium);
+      padding: var(--spacing-s) var(--spacing-s) calc(var(--spacing-s) - 2px);
       display: block;
       white-space: pre-wrap;
     }
@@ -132,12 +133,12 @@
 
   // Inline code
   code {
-    background-color: var(--color-blockquote);
+    color: var(--color-editor-inline-code-fg-preview);
+    background-color: var(--color-editor-inline-code-bg-preview);
     display: inline-block;
-    margin: var(--spacing-xxs);
     border-radius: 0.2rem;
     font-size: var(--font-small);
-    padding: calc(var(--spacing-xxs) - 4px) var(--spacing-xxs);
+    padding: calc(var(--spacing-xxs) - 4px) var(--spacing-xxs) calc(var(--spacing-xxs) - 5px);
   }
 
   a {
